This commit makes changes to some of the href url's and UI

--- a/src/data/projectInfo.json
+++ b/src/data/projectInfo.json
@@ -75,8 +75,8 @@
         "name": "JavaScript"
       }
     ],
-    "github_url": "https://github.com/JacobLewandowskiDev/Denarius-Finance-Manager",
-    "live_url": "https://google.com"
+    "github_url": "https://github.com/JacobLewandowskiDev/HVAC-Calculator",
+    "live_url": "https://jacoblewandowskidev.github.io/HVAC-Calculator"
   },
   {
     "name": "Chatroom",
