--- a/src/data/projectInfo.json
+++ b/src/data/projectInfo.json
@@ -1,7 +1,35 @@
 [
   {
-    "name": "Virtual Productivity Tracker",
+    "name": "Denarius",
     "image": "0",
+    "description": "Denarius - The name of my application originates from a silver coin used in ancient Rome as a form of payment. This web app assists its users in managing their finances. The client-side of the app after logging in can set up saving goals they wish to achieve by a certain date and track their expenses. The backend then takes care of storing that data and performing all of the calculations upon a specific endpoint request call. That data is then presented to the user for their viewing. The web app can also track the information of the top 20 trading Cryptocurrencies and updates the list every 2 minutes by pulling the data from coinmarketcap.com using the CoinMarketCap API.",
+    "techstack": [
+      {
+        "name": "Java"
+      },
+      {
+        "name": "Spring Boot"
+      },
+      {
+        "name": "MySQL"
+      },
+      {
+        "name": "HTML&CSS"
+      },
+      {
+        "name": "JavaScript"
+      },
+      {
+        "name": "Maven"
+      }
+    ],
+    "github_url": "https://www.github.com/JacobLewandowskiDev/Denarius-Finance-Manager",
+    "live_url": "https://www.jakub-lewandowski.com/denarius"
+  },
+
+  {
+    "name": "Virtual Productivity Tracker",
+    "image": "1",
     "description": "This project is a full-stack Virtual Task & Productivity Tracker application. The backend portion was built with Java 17. It provides a RESTful API for the frontend, allowing CRUD operations to modify the PostgreSQL database containing Virtual Tasks & their associated Steps. The front end portion of the Virtual Task & Productivity Tracker application was built with Vue 3 and Vite.",
     "techstack": [
       {
@@ -32,55 +60,13 @@
         "name": "JavaScript"
       }
     ],
-    "github_url": "https://github.com/JacobLewandowskiDev/todo-sandbox/tree/jacobscode?tab=readme-ov-file",
-    "live_url": "https://google.com"
+    "github_url": "https://www.github.com/JacobLewandowskiDev/todo-sandbox/tree/jacobscode?tab=readme-ov-file",
+    "live_url": "https://www.jakub-lewandowski.com/vpt"
   },
 
   {
-    "name": "Denarius",
-    "image": "1",
-    "description": "Denarius - The name of my application originates from a silver coin used in ancient Rome as a form of payment. This web app assists its users in managing their finances. The client-side of the app after logging in can set up saving goals they wish to achieve by a certain date and track their expenses. The backend then takes care of storing that data and performing all of the calculations upon a specific endpoint request call. That data is then presented to the user for their viewing. The web app can also track the information of the top 20 trading Cryptocurrencies and updates the list every 2 minutes by pulling the data from coinmarketcap.com using the CoinMarketCap API.",
-    "techstack": [
-      {
-        "name": "Java"
-      },
-      {
-        "name": "Spring Boot"
-      },
-      {
-        "name": "MySQL"
-      },
-      {
-        "name": "HTML&CSS"
-      },
-      {
-        "name": "JavaScript"
-      },
-      {
-        "name": "Maven"
-      }
-    ],
-    "github_url": "https://github.com/JacobLewandowskiDev/Denarius-Finance-Manager",
-    "live_url": "https://google.com"
-  },
-  {
-    "name": "Mechanical Engineer Calculator",
-    "image": "2",
-    "description": "As an MEP & HVAC Engineer, I figured I'd create an online calculator that helps with the tedious portion of creating an HVAC/MEP project. This particular app allows its users to calculate the pipe/air duct diameters and sizes in 4 different specializations (Heating, Ventilation, Water supply, and gas supply).",
-    "techstack": [
-      {
-        "name": "HTML&CSS"
-      },
-      {
-        "name": "JavaScript"
-      }
-    ],
-    "github_url": "https://github.com/JacobLewandowskiDev/HVAC-Calculator",
-    "live_url": "https://jacoblewandowskidev.github.io/HVAC-Calculator"
-  },
-  {
     "name": "Chatroom",
-    "image": "3",
+    "image": "2",
     "description": "Chat Room - A chat room app based on WebSockets. Once a user has typed in a username that they will be using in the web app they can send messages in the global chat room for all of the connected users to see.",
     "techstack": [
       {
@@ -99,9 +85,26 @@
         "name": "Maven"
       }
     ],
-    "github_url": "https://github.com/JacobLewandowskiDev/Chat-Room",
-    "live_url": "https://google.com"
+    "github_url": "https://www.github.com/JacobLewandowskiDev/Chat-Room",
+    "live_url": "https://www.jakub-lewandowski.com/chatroom"
   },
+
+  {
+    "name": "Mechanical Engineer Calculator",
+    "image": "3",
+    "description": "As an MEP & HVAC Engineer, I figured I'd create an online calculator that helps with the tedious portion of creating an HVAC/MEP project. This particular app allows its users to calculate the pipe/air duct diameters and sizes in 4 different specializations (Heating, Ventilation, Water supply, and gas supply).",
+    "techstack": [
+      {
+        "name": "HTML&CSS"
+      },
+      {
+        "name": "JavaScript"
+      }
+    ],
+    "github_url": "https://www.github.com/JacobLewandowskiDev/HVAC-Calculator",
+    "live_url": "https://www.jacoblewandowskidev.github.io/HVAC-Calculator"
+  },
+  
   {
     "name": "Gwent: The Card Game",
     "image": "4",
@@ -133,6 +136,6 @@
       }
     ],
     "github_url": "https://www.playgwent.com/pl/",
-    "live_url": "https://google.com"
+    "live_url": "https://www.google.com"
   }
 ]
