This commit makes more changes to links

--- a/src/data/projectInfo.json
+++ b/src/data/projectInfo.json
@@ -102,6 +102,6 @@
       }
     ],
     "github_url": "https://www.github.com/JacobLewandowskiDev/HVAC-Calculator",
-    "live_url": "https://www.jakub-lewandowski.com/hvac-calculator"
+    "live_url": "https://whale-app-mphx9.ondigitalocean.app/"
   }
 ]
