--- a/src/data/projectInfo.json
+++ b/src/data/projectInfo.json
@@ -48,6 +48,9 @@
         "name": "Spring Boot"
       },
       {
+        "name": "WebSockets"
+      },
+      {
         "name": "HTML&CSS"
       },
       {
