--- a/src/data/projectInfo.json
+++ b/src/data/projectInfo.json
@@ -1,7 +1,40 @@
 [
   {
-    "name": "Virtual Productivity Tracker",
+    "name": "Gwent: The Card Game",
     "image": "0",
+    "description": "During the playthrough of the 'Witcher 3' from CDProject I really enjoyed the mini game of 'Gwent'. It is a 2 player turn based duel, where each user has a deck of cards and the goal is to outscore the opponents monsters on the field. I enjoyed the game so much that I looked for the exact iteration of it online (Steam, websites etc.), but to my suprise the only version available was a heavily modified one also created by CD Project. That is when I decided to re-create it myself, while adding a bit of my own creativity and twist to it. My goal was to create a place, where players could create their own champion, give them a name and delve into the world of the 'Witcher' once more. I decided to go the retro route and create a sprite based 2D top down MMO RPG game. Once you create your character you will join a server where you can meet other players, talk to them via a global chat and most importantly challenge them to a game of GWENT.",
+    "techstack": [
+      {
+        "name": "Java"
+      },
+      {
+        "name": "Spring Boot"
+      },
+      {
+        "name": "HTML&CSS"
+      },
+      {
+        "name": "JavaScript"
+      },
+      {
+        "name": "Maven"
+      },
+      {
+        "name": "VueX"
+      },
+      {
+        "name": "Vue"
+      },
+      {
+        "name": "WebSockets"
+      }
+    ],
+    "github_url": "https://github.com/JacobLewandowskiDev/GwentMMO-front",
+    "live_url": "https://www.jakub-lewandowski.com/under-construction"
+  },
+  {
+    "name": "Virtual Productivity Tracker",
+    "image": "1",
     "description": "This project is a full-stack Virtual Task & Productivity Tracker application. The backend portion was built with Java 17. It provides a RESTful API for the frontend, allowing CRUD operations to modify the PostgreSQL database containing Virtual Tasks & their associated Steps. The front end portion of the Virtual Task & Productivity Tracker application was built with Vue 3 and Vite.",
     "techstack": [
       {
@@ -35,10 +68,9 @@
     "github_url": "https://www.github.com/JacobLewandowskiDev/todo-sandbox/tree/jacobscode?tab=readme-ov-file",
     "live_url": "https://www.jakub-lewandowski.com/vpt"
   },
-
   {
     "name": "Chatroom",
-    "image": "1",
+    "image": "2",
     "description": "Chat Room - A chat room app based on WebSockets. Once a user has typed in a username that they will be using in the web app they can send messages in the global chat room for all of the connected users to see.",
     "techstack": [
       {
@@ -63,10 +95,9 @@
     "github_url": "https://www.github.com/JacobLewandowskiDev/Chat-Room",
     "live_url": "https://www.jakub-lewandowski.com/chatroom"
   },
-
   {
     "name": "Denarius",
-    "image": "2",
+    "image": "3",
     "description": "Denarius - The name of my application originates from a silver coin used in ancient Rome as a form of payment. This web app assists its users in managing their finances. The client-side of the app after logging in can set up saving goals they wish to achieve by a certain date and track their expenses. The backend then takes care of storing that data and performing all of the calculations upon a specific endpoint request call. That data is then presented to the user for their viewing. The web app can also track the information of the top 20 trading Cryptocurrencies and updates the list every 2 minutes by pulling the data from coinmarketcap.com using the CoinMarketCap API.",
     "techstack": [
       {
@@ -91,10 +122,9 @@
     "github_url": "https://www.github.com/JacobLewandowskiDev/Denarius-Finance-Manager",
     "live_url": "https://www.jakub-lewandowski.com/denarius"
   },
-
   {
     "name": "Mechanical Engineer Calculator",
-    "image": "3",
+    "image": "4",
     "description": "As an MEP & HVAC Engineer, I figured I'd create an online calculator that helps with the tedious portion of creating an HVAC/MEP project. This particular app allows its users to calculate the pipe/air duct diameters and sizes in 4 different specializations (Heating, Ventilation, Water supply, and gas supply).",
     "techstack": [
       {
