--- a/src/data/projectInfo.json
+++ b/src/data/projectInfo.json
@@ -33,8 +33,25 @@
     "live_url": "https://www.jakub-lewandowski.com/under-construction"
   },
   {
-    "name": "Virtual Productivity Tracker",
+    "name": "Triple Seven Capital",
     "image": "1",
+    "description": "Collaborated with the Founder & CEO of Triple Seven Capital to design and develop a modern, responsive website for the real estate investment firm. Built with Vue.js and Vite, the site features a sleek UI, intuitive navigation, and an update-friendly structure. The project includes dynamic routing, a custom domain setup, and static pre-rendering for improved performance. The result is a fast, user-friendly platform that effectively showcases the firm's mission and services.",
+    "techstack": [
+      {
+        "name": "HTML&CSS"
+      },
+      {
+        "name": "JavaScript"
+      },
+      {
+        "name": "Vue"
+      }
+    ],
+    "live_url": "https://www.triplesevencapital.com"
+  },
+  {
+    "name": "Virtual Productivity Tracker",
+    "image": "2",
     "description": "This project is a full-stack Virtual Task & Productivity Tracker application. The backend portion was built with Java 17. It provides a RESTful API for the frontend, allowing CRUD operations to modify the PostgreSQL database containing Virtual Tasks & their associated Steps. The front end portion of the Virtual Task & Productivity Tracker application was built with Vue 3 and Vite.",
     "techstack": [
       {
@@ -70,7 +87,7 @@
   },
   {
     "name": "Chatroom",
-    "image": "2",
+    "image": "3",
     "description": "Chat Room - A chat room app based on WebSockets. Once a user has typed in a username that they will be using in the web app they can send messages in the global chat room for all of the connected users to see.",
     "techstack": [
       {
@@ -97,7 +114,7 @@
   },
   {
     "name": "Denarius",
-    "image": "3",
+    "image": "4",
     "description": "Denarius - The name of my application originates from a silver coin used in ancient Rome as a form of payment. This web app assists its users in managing their finances. The client-side of the app after logging in can set up saving goals they wish to achieve by a certain date and track their expenses. The backend then takes care of storing that data and performing all of the calculations upon a specific endpoint request call. That data is then presented to the user for their viewing. The web app can also track the information of the top 20 trading Cryptocurrencies and updates the list every 2 minutes by pulling the data from coinmarketcap.com using the CoinMarketCap API.",
     "techstack": [
       {
@@ -124,7 +141,7 @@
   },
   {
     "name": "Mechanical Engineer Calculator",
-    "image": "4",
+    "image": "5",
     "description": "As an MEP & HVAC Engineer, I figured I'd create an online calculator that helps with the tedious portion of creating an HVAC/MEP project. This particular app allows its users to calculate the pipe/air duct diameters and sizes in 4 different specializations (Heating, Ventilation, Water supply, and gas supply).",
     "techstack": [
       {
