This commit fixes routing

--- a/src/data/projectInfo.json
+++ b/src/data/projectInfo.json
@@ -110,7 +110,7 @@
       }
     ],
     "github_url": "https://www.github.com/JacobLewandowskiDev/Chat-Room",
-    "live_url": "https://www.jakub-lewandowski.com/project-discontinued"
+    "live_url": "https://www.jakub-lewandowski.com/ProjectDiscontinued"
   },
   {
     "name": "Denarius",
